--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title>OpenAI Chatbot</title>
+    <style>
+        body {
+            color: rgb(255, 255, 255);
+        }
+
+    </style>
 </head>
 <body>
     <h1>OpenAI Chatbot</h1>
