--- a/templates/chat.html
+++ b/templates/chat.html
@@ -15,7 +15,7 @@
         }
     </style>
 </head>
-<body>
+<body style="color: white;">
     <div class="container">
         <h1>Virtual Game Master</h1>
         <!-- Chat History Container with Scrolling -->
