--- a/templates/chat.html
+++ b/templates/chat.html
@@ -28,9 +28,11 @@
         </div>
         <!-- User Input Form -->
         <form method="POST" action="/" id="chat-form">
-            <input type="text" name="user_input" placeholder="Type your message..." id="user-input">
+            <input type="text" name="user_input" placeholder="Type your message..." id="user-input" style="width: 100%; padding: 10px;">
             <button type="submit">Send</button>
         </form>
+       
+        
     </div>
 
     <!-- Add JavaScript to focus the input field when the page loads and scroll to the bottom of the chat history -->
