--- a/templates/chat.html
+++ b/templates/chat.html
@@ -45,7 +45,9 @@
         <form method="POST" action="/" id="chat-form">
             <input type="text" name="user_input" placeholder="Type your message..." id="user-input" style="width: 100%; padding: 10px;">
             <!-- Add a hidden input field for the username parameter -->
-            <input type="hidden" name="username" value="{{ username }}">
+            <!-- <input type="hidden" name="username" value="{{ username }}"> -->
+            <input type="text" name="username" value="{{ username }}">
+
             <button type="submit">Send</button>
         </form>
 
