--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,14 @@
 <head>
     <title>Chat Interface</title>
     <style>
-
+        #chat-box {
+            height: 400px;
+            overflow-y: auto;
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-bottom: 10px;
+            color: white
+        }
     </style>
 </head>
 <body>
