--- a/templates/chat.html
+++ b/templates/chat.html
@@ -14,18 +14,21 @@
             font-family: Arial, sans-serif; /* Default font for chat box */
         }
         .user-message {
-            background-color: lightblue;
+            color: lightblue; /* Change text color to light blue */
             font-family: Arial, sans-serif;
             padding: 5px;
             border-radius: 5px;
             margin-bottom: 2px;
+            background: none; /* Remove background */
         }
         .bot-message {
+            color: white; /* Change text color to white */
             font-family: "Times New Roman", Times, serif;
             font-size: larger;
             padding: 5px;
             border-radius: 5px;
             margin-bottom: 2px;
+            background: none; /* Remove background */
         }
         #user-input {
             width: 80%;
@@ -35,6 +38,7 @@
             width: 19%;
         }
     </style>
+    
 </head>
 <body>
     <div id="chat-box">
